--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "poyabzal-shop",
+  "name": "poyabzal_shop",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -23,10 +23,7 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
-    "prettier": "^2.4.1",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.4.8",
