--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "axios-case-converter": "^0.9.0",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-dynamic-star-rating": "^1.0.8",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
