--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-dynamic-star-rating": "^1.0.8",
+    "vue-imask": "^6.4.2",
+    "vue-phone-number-input": "^1.1.12",
     "vue-router": "^3.5.1",
+    "vue-tel-input-vuetify": "^1.5.2",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
   },
@@ -25,6 +28,7 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/composition-api": "^1.4.9",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "sass": "~1.32.0",
