--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.26.1",
     "axios-case-converter": "^0.9.0",
     "core-js": "^3.8.3",
+    "moment": "^2.29.2",
     "vue": "^2.6.14",
     "vue-dynamic-star-rating": "^1.0.8",
     "vue-imask": "^6.4.2",
