--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-phone-number-input": "^1.1.12",
     "vue-router": "^3.5.1",
     "vue-tel-input-vuetify": "^1.5.2",
+    "vue-the-mask": "^0.11.1",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
   },
