--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "moment": "^2.29.2",
     "vue": "^2.6.14",
     "vue-dynamic-star-rating": "^1.0.8",
+    "vue-i18n": "^8.27.1",
     "vue-imask": "^6.4.2",
     "vue-phone-number-input": "^1.1.12",
     "vue-router": "^3.5.1",
     "vue-tel-input-vuetify": "^1.5.2",
     "vue-the-mask": "^0.11.1",
+    "vue-yandex-maps": "^0.11.8",
+    "vue2-google-maps": "^0.10.7",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
   },
@@ -38,5 +41,17 @@
     "vue-cli-plugin-vuetify": "~2.4.8",
     "vue-template-compiler": "^2.6.14",
     "vuetify-loader": "^1.7.0"
-  }
+  },
+  "description": "```\r npm install\r ```",
+  "main": ".eslintrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Ulugbek-Mominjonov/poyabzal.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Ulugbek-Mominjonov/poyabzal/issues"
+  },
+  "homepage": "https://github.com/Ulugbek-Mominjonov/poyabzal#readme"
 }
